2008-08-18  higepon  <higepon@users.sourceforge.jp>

        * All of the internal errors are rewrote to error or assertion-violation.

2008-08-17  higepon  <higepon@users.sourceforge.jp>

        * scheme.cpp : Removed TypedVector.cpp

2008-08-16  higepon  <higepon@users.sourceforge.jp>

        * freeproc.cpp (scheme::procedurePEx): Removed typdevector stuff.

        * ProcedureMacro.h: Added.

        * RecordProcedures.cpp: Replaced all RAISE to assertion-violation and added tests for them.

2008-08-15  higepon  <higepon@users.sourceforge.jp>

        * ViolationProcedures.cpp (scheme::throwEx): Added (throw ...) procedure.

        * tools/psyntax-r6rs/psyntax/main-mosh.ss (psyntax): Defined default exception handler.

2008-08-14  higepon  <higepon@users.sourceforge.jp>

        * Fixed with-exception-handler, raise, assertion-violation.

        * Passed hashtables test of R6RS test suite.

        * ViolationProcedures.cpp: Added.

        * library.scm (exists): Fixed bug of (exists proc lst).

        * VM.cpp (run): Added Object Pointer type checking for debug build.

                      : Rewrote apply.

2008-08-13  higepon  <higepon@users.sourceforge.jp>

        * library.scm (make-parameter): Added SRFI-39 Parameter Objects to Mosh core.

2008-08-12  higepon  <higepon@users.sourceforge.jp>

        * Added dynamic-wind. It works well.

        * VM.cpp (VM::run): Fixed bug of recieve from (values).

2008-08-08  higepon  <higepon@users.sourceforge.jp>

        * library.scm (expt): Addes expt.

        * r6rs-test-suite/Makefile (test): Added r6rs-test-suite from PLT Scheme.

        * Makefile.am (test): Added R6RS tests.

2008-08-07  higepon  <higepon@users.sourceforge.jp>

        * Implemented R6RS Conditions.

2008-08-05  higepon  <higepon@users.sourceforge.jp>

        * freeproc.cpp (scheme::assertionViolationEx): added assertion-violation.

        * Implemented R6RS Records "Syntactic Layer".
