@@ -257,6 +257,7 @@ const Object* scheme::getBuiltinSymbols() {
         SA("define-structure"),
         SA("defmacro"),
         SA("defstruct"),
+        SA("delete-file"),
         SA("descend-quasiquote"),
         SA("descend-quasiquote-pair"),
         SA("descend-quasiquote-vector"),
@@ -1265,6 +1266,7 @@ const Object* scheme::getBuiltinSymbols() {
         SA("top level :$:void"),
         SA("top level :$:with-exception-handler"),
         SA("top level :$:with-input-from-file"),
+        SA("top level :$:with-output-to-file"),
         SA("top level :$:write-char"),
         SA("top level :$:write-to-file"),
         SA("top level :$:xcons"),
@@ -1309,6 +1311,7 @@ const Object* scheme::getBuiltinSymbols() {
         SA("when"),
         SA("with-exception-handler"),
         SA("with-input-from-file"),
+        SA("with-output-to-file"),
         SA("write"),
         SA("write-to-file"),
         SA("x"),
