@@ -1,10 +1,12 @@
 (import (rnrs) (party))
-(define p (make-party))
-(guard [c (#t #t)]
-       (x 3))
-(pop! p) ; displays "Boom! 108"
-(push! p (push (make 5 5) 1))
-(pop! p)
+(delete-file "not-cgadad///")
+
+;; (define p (make-party))
+;; (guard [c (#t #t)]
+;;        (x 3))
+;; (pop! p) ; displays "Boom! 108"
+;; (push! p (push (make 5 5) 1))
+;; (pop! p)
 
 
-(hashtable-clear! (hashtable-copy (make-eq-hashtable) #f))
+;; (hashtable-clear! (hashtable-copy (make-eq-hashtable) #f))
